<resources>
    <string name="app_name">Math Test Pro</string>
    <string name="select_options">Select Options</string>
    <string name="select_set">Select Set</string>
    <string name="start_button">Start</string>

    <string name="page_number_message">%1$d of %2$d</string>
    <string name="snack_bar_message">Please make a selection</string>
    <string name="serial_no_text">%1$s.</string>
    <string name="expression_text">%1$s %2$s</string>
    <string name="right_answer_text">The correct answer is %1$s</string>
    <string name="correct_text">Correct</string>
    <string name="wrong_text">Oops, that is wrong</string>
    <string name="finish_text">Finish</string>
    <string name="header_text">Math Test Pro</string>

    <string name="change_color">Change Color</string>
    <string name="legal">Legal</string>



    <string name="complete_text">Hooray you finished your test, well done..!!</string>

    <string name="license_header">Libraries Used</string>
    <string name="license_text">The following sets forth attribution notices for third party software that may be contained in portions of the Math Test Pro application.</string>

    <string name="blur_behind_header">BlurBehind</string>
    <string name="material_spinner_header">Material-Spinner</string>

    <string name="blur_behind_license"><![CDATA[The MIT License (MIT)<br></br><br></br>

                    Copyright &#169; 2014 Gokberk Ergun

                    <p>Permission is hereby granted, free of charge, to any person obtaining a copy
                    of this software and associated documentation files (the "Software"), to deal
                    in the Software without restriction, including without limitation the rights
                    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
                    copies of the Software, and to permit persons to whom the Software is
                    furnished to do so, subject to the following conditions:</p><br></br>

                    <p>The above copyright notice and this permission notice shall be included in all
                    copies or substantial portions of the Software.</p><br></br>

                    <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
                    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
                    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
                    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
                    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
                    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
                    SOFTWARE.</p>


    ]]></string>


    <string name="material_spinner_license"><![CDATA[Copyright &#169; 2016 Jared Rummler<br></br><br></br>

                    <p>Licensed under the Apache License, Version 2.0 (the "License");
                    you may not use this file except in compliance with the License.
                    You may obtain a copy of the License at</p>

                       http://www.apache.org/licenses/LICENSE-2.0<br></br><br></br>

                    <p>Unless required by applicable law or agreed to in writing, software
                    distributed under the License is distributed on an "AS IS" BASIS,
                    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
                    See the License for the specific language governing permissions and
                    limitations under the License.</p>

    ]]></string>


</resources>
