<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:gravity="left"
                android:textColor="#37474F"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/license_header"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textColor="#78909C"
                android:text="@string/license_text"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:gravity="left"
                android:textColor="#78909C"
                android:textStyle="bold"
                android:text="@string/blur_behind_header"/>
            <TextView
                android:id="@+id/blur_behind_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textColor="#37474F"
                android:background="#B0BEC5"
                android:text="@string/blur_behind_license"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:gravity="left"
                android:textColor="#78909C"
                android:textStyle="bold"
                android:text="@string/material_spinner_header"/>
            <TextView
                android:id="@+id/material_spinner_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textColor="#37474F"
                android:background="#B0BEC5"
                android:text="@string/material_spinner_header"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"></LinearLayout>
        </LinearLayout>

    </ScrollView>



</LinearLayout>
